--- a/.github/actions/deploy-hyp3/action.yml
+++ b/.github/actions/deploy-hyp3/action.yml
@@ -74,12 +74,7 @@ runs:
         run: |
           pip install --upgrade pip
           make install
-          make files='${{ inputs.JOB_FILES }}' render
-          python -m pip install -r requirements-apps-api.txt -t apps/api/src
-          python -m pip install -r requirements-apps-process-new-granules.txt -t apps/process-new-granules/src
-          python -m pip install -r requirements-apps-update-db.txt -t apps/update-db/src
-          python -m pip install -r requirements-apps-scale-cluster.txt -t apps/scale-cluster/src
-          python -m pip install -r requirements-apps-start-execution.txt -t apps/start-execution/src
+          make files='${{ inputs.JOB_FILES }}' build
       - name: Package and deploy
         shell: bash
         run: |
