--- a/apps/get-files/get-files-cf.yml
+++ b/apps/get-files/get-files-cf.yml
@@ -46,9 +46,10 @@ Resources:
           Effect: Allow
       PermissionsBoundary: !If [UsePermissionsBoundary, !Ref PermissionsBoundaryPolicyArn, !Ref AWS::NoValue]
       ManagedPolicyArns:
+        - !If [LambdasInVpc, arn:aws:iam::aws:policy/service-role/AWSLambdaVPCAccessExecutionRole, !Ref AWS::NoValue]
         - !Ref TaskPolicy
 
-  TaskPolicy:
+  Policy:
     Type: AWS::IAM::ManagedPolicy
     Properties:
       PolicyDocument:
