--- a/apps/api/api-cf.yml
+++ b/apps/api/api-cf.yml
@@ -39,6 +39,9 @@ Parameters:
   SubnetIds:
     Type: CommaDelimitedList
 
+  JPLRoles:
+    Type: String
+
 Conditions:
 
   UsePermissionsBoundary: !Not [!Equals [!Ref PermissionsBoundaryPolicyArn, ""]]
@@ -46,6 +49,8 @@ Conditions:
   LambdasInVpc: !Not [!Equals [!Ref SecurityGroupId, ""]]
 
   UseCustomDomainName: !Not [!Equals [!Ref DomainName, ""]]
+
+  UseJPLRoles: !Not [!Equals [!Ref JPLRoles, ""]]
 
 Outputs:
 
@@ -97,8 +102,10 @@ Resources:
       Stage: $default
 
   ApiRole:
-    Type: AWS::IAM::Role
+    Type: !If [UseJPLRoles, Custom::JplRole, AWS::IAM::Role]
     Properties:
+      ServiceToken: !If [UseJPLRoles, !ImportValue Custom::JplRole::ServiceToken, !Ref AWS::NoValue]
+      Path: !If [UseJPLRoles, /account-managed/hyp3/, !Ref AWS::NoValue]
       AssumeRolePolicyDocument:
         Version: 2012-10-17
         Statement:
@@ -111,8 +118,10 @@ Resources:
         - !Ref ApiPolicy
 
   ApiPolicy:
-    Type: AWS::IAM::ManagedPolicy
+    Type: !If [UseJPLRoles, Custom::JplPolicy, AWS::IAM::ManagedPolicy]
     Properties:
+      ServiceToken: !If [UseJPLRoles, !ImportValue Custom::JplPolicy::ServiceToken, !Ref AWS::NoValue]
+      Path: !If [UseJPLRoles, /account-managed/hyp3/, !Ref AWS::NoValue]
       PolicyDocument:
         Version: 2012-10-17
         Statement:
@@ -127,8 +136,10 @@ Resources:
       RetentionInDays: 90
 
   LambdaRole:
-    Type: AWS::IAM::Role
+    Type: !If [UseJPLRoles, Custom::JplRole, AWS::IAM::Role]
     Properties:
+      ServiceToken: !If [UseJPLRoles, !ImportValue Custom::JplRole::ServiceToken, !Ref AWS::NoValue]
+      Path: !If [UseJPLRoles, /account-managed/hyp3/, !Ref AWS::NoValue]
       AssumeRolePolicyDocument:
         Version: 2012-10-17
         Statement:
@@ -142,8 +153,10 @@ Resources:
         - !Ref LambdaPolicy
 
   LambdaPolicy:
-    Type: AWS::IAM::ManagedPolicy
+    Type: !If [UseJPLRoles, Custom::JplPolicy, AWS::IAM::ManagedPolicy]
     Properties:
+      ServiceToken: !If [UseJPLRoles, !ImportValue Custom::JplPolicy::ServiceToken, !Ref AWS::NoValue]
+      Path: !If [UseJPLRoles, /account-managed/hyp3/, !Ref AWS::NoValue]
       PolicyDocument:
         Version: 2012-10-17
         Statement:
