update *.yml files

--- a/apps/api/api-cf.yml
+++ b/apps/api/api-cf.yml
@@ -138,6 +138,7 @@ Resources:
           Effect: Allow
       PermissionsBoundary: !If [UsePermissionsBoundary, !Ref PermissionsBoundaryPolicyArn, !Ref AWS::NoValue]
       ManagedPolicyArns:
+        - !If [LambdasInVpc, arn:aws:iam::aws:policy/service-role/AWSLambdaVPCAccessExecutionRole, !Ref AWS::NoValue]
         - !Ref LambdaPolicy
 
   LambdaPolicy:
