run cfn-lint for all environments even when one fails

--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -19,6 +19,7 @@ jobs:
   cfn-lint:
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
         security_environment: [ASF, EDC, JPL]
     steps:
