--- a/apps/api/src/hyp3_api/api-spec/openapi-spec.yml
+++ b/apps/api/src/hyp3_api/api-spec/openapi-spec.yml
@@ -530,7 +530,7 @@ components:
         Run time in seconds for the final processing attempt (regardless of whether it succeeded). A value of zero
         likely indicates that the job failed before reaching the processing step, although it may also indicate that the
         job failed after reaching the processing step but before calculating the processing time.
-      type: integer
+      type: number
       minimum: 0
 
   securitySchemes:
