jinja-ize domain name and certificate arn parameters in main-cf.yml.j2

--- a/.github/actions/deploy-hyp3/action.yml
+++ b/.github/actions/deploy-hyp3/action.yml
@@ -81,6 +81,12 @@ runs:
           [ -z ${{ inputs.CLOUDFORMATION_ROLE_ARN }} ] && export ROLE_STATEMENT="" \
             || export ROLE_STATEMENT="--role-arn ${{ inputs.CLOUDFORMATION_ROLE_ARN }}"
 
+          [ -z ${{ inputs.DOMAIN_NAME }} ] && export DOMAIN_NAME="" \
+            || export DOMAIN_NAME="DomainName='${{ inputs.DOMAIN_NAME }}'"
+
+          [ -z ${{ inputs.CERTIFICATE_ARN }} ] && export CERTIFICATE_ARN="" \
+            || export CERTIFICATE_ARN="CertificateArn='${{ inputs.CERTIFICATE_ARN }}'"
+
           aws cloudformation package \
             --template-file apps/main-cf.yml \
             --s3-bucket ${{ inputs.TEMPLATE_BUCKET }} \
@@ -97,8 +103,8 @@ runs:
                 EDLPassword='${{ inputs.EDL_PASSWORD }}' \
                 ImageTag='${{ inputs.IMAGE_TAG }}' \
                 ProductLifetimeInDays='${{ inputs.PRODUCT_LIFETIME }}' \
-                DomainName='${{ inputs.DOMAIN_NAME }}' \
-                CertificateArn='${{ inputs.CERTIFICATE_ARN }}' \
+                $DOMAIN_NAME \
+                $CERTIFICATE_ARN \
                 MonthlyJobQuotaPerUser='${{ inputs.MONTHLY_JOB_QUOTA_PER_USER }}' \
                 BannedCidrBlocks='${{ inputs.BANNED_CIDR_BLOCKS }}' \
                 DefaultMaxvCpus='${{ inputs.DEFAULT_MAX_VCPUS }}' \
