correct arn reference in jpl deployment template

--- a/docs/deployments/JPL-deployment-policy-cf.yml
+++ b/docs/deployments/JPL-deployment-policy-cf.yml
@@ -75,4 +75,4 @@ Resources:
   ApiGatewayLoggingPermission:
     Type: AWS::ApiGateway::Account
     Properties:
-      CloudWatchRoleArn: !Ref ApiGatewayLoggingRole
+      CloudWatchRoleArn: !GetAtt ApiGatewayLoggingRole.Arn
