--- a/.github/actions/deploy-hyp3/action.yml
+++ b/.github/actions/deploy-hyp3/action.yml
@@ -65,8 +65,8 @@ inputs:
   AMI_ID:
     description: "Name of the Systems Manager parameter from which to retrieve the current Ami Id"
     required: true
-  INSTANCE_SIZES:
-    description: "Space separated list of supported instance sizes"
+  INSTANCE_TYPES:
+    description: "Space separated list of supported instance types"
     required: true
 
 runs:
@@ -77,7 +77,7 @@ runs:
         run: |
           pip install --upgrade pip
           make install
-          make files='${{ inputs.JOB_FILES }}' security_environment='${{ inputs.SECURITY_ENVIRONMENT }}' instance_sizes='${{ inputs.instance_sizes }}' build
+          make files='${{ inputs.JOB_FILES }}' security_environment='${{ inputs.SECURITY_ENVIRONMENT }}' instance_types='${{ inputs.INSTANCE_TYPES }}' build
       - name: Package and deploy
         shell: bash
         run: |
