--- a/.github/workflows/deploy-enterprise.yml
+++ b/.github/workflows/deploy-enterprise.yml
@@ -52,7 +52,7 @@ jobs:
             required_surplus: 0
             security_environment: ASF
             ami_id: /aws/service/ecs/optimized-ami/amazon-linux-2/recommended/image_id
-            instance_types: r5d.xlarge
+            instance_types: c5d.xlarge
 
           - environment: hyp3-tibet
             domain: hyp3-tibet.asf.alaska.edu
@@ -66,7 +66,7 @@ jobs:
             required_surplus: 0
             security_environment: ASF
             ami_id: /aws/service/ecs/optimized-ami/amazon-linux-2/recommended/image_id
-            instance_types: r5d.xlarge
+            instance_types: c5d.xlarge
 
           - environment: hyp3-a19-jpl
             domain: hyp3-a19-jpl.asf.alaska.edu
@@ -80,7 +80,7 @@ jobs:
             required_surplus: 0
             security_environment: JPL
             ami_id: /aws/service/ecs/optimized-ami/amazon-linux-2/recommended/image_id
-            instance_types: r5d.xlarge
+            instance_types: c5d.xlarge
 
     environment:
       name: ${{ matrix.environment }}
