--- a/.github/workflows/deploy-daac.yml
+++ b/.github/workflows/deploy-daac.yml
@@ -46,9 +46,7 @@ jobs:
             required_surplus: 1000
             security_environment: ASF
             ami_id: /aws/service/ecs/optimized-ami/amazon-linux-2/recommended/image_id
-            instance_types: >-
-              r5d.xlarge
-              r5dn.xlarge
+            instance_types: r5d.xlarge,r5dn.xlarge
 
           - environment: hyp3-edc-prod
             domain: ''
