--- a/.github/workflows/deploy-daac.yml
+++ b/.github/workflows/deploy-daac.yml
@@ -47,6 +47,7 @@ jobs:
             required_surplus: 1000
             security_environment: ASF
             ami_id: /aws/service/ecs/optimized-ami/amazon-linux-2/recommended/image_id
+            distribution_url: ''
 
           - environment: hyp3-edc-prod
             domain: ''
@@ -62,6 +63,7 @@ jobs:
             required_surplus: 1000
             security_environment: EDC
             ami_id: image_id_ecs_amz2
+            distribution_url: 'TODO'
 
           - environment: hyp3-edc-uat
             domain: ''
@@ -77,6 +79,7 @@ jobs:
             required_surplus: 1000
             security_environment: EDC
             ami_id: image_id_ecs_amz2
+            distribution_url: 'TODO'
 
     environment:
       name: ${{ matrix.environment }}
@@ -122,6 +125,7 @@ jobs:
           SECURITY_ENVIRONMENT: ${{ matrix.security_environment }}
           AMI_ID: ${{ matrix.ami_id }}
           INSTANCE_TYPES: ${{ matrix.instance_types }}
+          DISTRIBUTION_URL: ${{ matrix.distribution_url }}
 
   call-bump-version-workflow:
     if: github.ref == 'refs/heads/main'
