--- a/.github/workflows/deploy-daac.yml
+++ b/.github/workflows/deploy-daac.yml
@@ -27,6 +27,7 @@ jobs:
             required_surplus: 1000
             security_environment: ASF
             ami_id: /aws/service/ecs/optimized-ami/amazon-linux-2/recommended/image_id
+            distribution_url: ''
 
           - environment: hyp3-test
             domain: hyp3-test-api.asf.alaska.edu
