update distribution url description in deploy action.yml

--- a/.github/actions/deploy-hyp3/action.yml
+++ b/.github/actions/deploy-hyp3/action.yml
@@ -72,7 +72,7 @@ inputs:
     description: "Comma separated list of supported EC2 instance types"
     required: true
   DISTRIBUTION_URL:
-    description: "Distribution endpoint URL for EDC environments"
+    description: "CloudFront Distribution URL for Earthdata Cloud environments"
     required: true
 
 runs:
