--- a/docs/deployments/ASF-deployment-ci-cf.yml
+++ b/docs/deployments/ASF-deployment-ci-cf.yml
@@ -2,35 +2,37 @@ AWSTemplateFormatVersion: 2010-09-09
 
 Parameters:
   CFBucket:
-      Description: AWS S3 bucket fo uploading CloudFormation templates
-      Type: String
+    Description: AWS S3 bucket fo uploading CloudFormation templates
+    Type: String
 
 Resources:
   CloudformationDeploymentRole:
     Type: AWS::IAM::Role
     Properties:
       Policies:
-        Version: 2012-10-17
-        Statement:
-          - Effect: Allow
-            Action:
-              - ec2:*
-              - s3:*
-              - ecs:*
-              - batch:*
-              - events:*
-              - logs:*
-              - iam:*
-              - lambda:*
-              - ssm:GetParameters
-              - apigateway:*
-              - states:*
-              - dynamodb:*
-              - cloudwatch:*
-              - sns:*
-              - secretsmanager:*
-              - kms:*
-            Resource": "*"
+        - PolicyName: cloud-formation-deployment-policy
+          PolicyDocument:
+            Version: 2012-10-17
+            Statement:
+              - Effect: Allow
+                Action:
+                  - ec2:*
+                  - s3:*
+                  - ecs:*
+                  - batch:*
+                  - events:*
+                  - logs:*
+                  - iam:*
+                  - lambda:*
+                  - ssm:GetParameters
+                  - apigateway:*
+                  - states:*
+                  - dynamodb:*
+                  - cloudwatch:*
+                  - sns:*
+                  - secretsmanager:*
+                  - kms:*
+                Resource: "*"
       AssumeRolePolicyDocument:
         Version: 2012-10-17
         Statement:
@@ -41,40 +43,42 @@ Resources:
 
   GithubActionsUser:
     Type: AWS::IAM::User
-    UserName: github-actions
     Properties:
+      UserName: github-actions
       Policies:
-        Version: 2012-10-17
-        Statement:
-          - Effect: Allow
-            Action:
-              - cloudformation:ValidateTemplate
-              - cloudformation:DescribeStacks
-              - ssm:GetParameters
-            Resource: "*"
+        - PolicyName: github-actions-user-policy
+          PolicyDocument:
+            Version: 2012-10-17
+            Statement:
+              - Effect: Allow
+                Action:
+                  - cloudformation:ValidateTemplate
+                  - cloudformation:DescribeStacks
+                  - ssm:GetParameters
+                Resource: "*"
 
-          - Effect: Allow
-            Action: iam:PassRole
-            Resource: !GetAtt CloudformationDeploymentRole.Arn
-            Condition:
-              StringLike:
-                iam:AssociatedResourceArn: !Sub "arn:aws:cloudformation:us-west-2:${AWS::AccountId}:stack/*"
+              - Effect: Allow
+                Action: iam:PassRole
+                Resource: !GetAtt CloudformationDeploymentRole.Arn
+                Condition:
+                  StringLike:
+                    iam:AssociatedResourceArn: !Sub "arn:aws:cloudformation:us-west-2:${AWS::AccountId}:stack/*"
 
-          - Effect: Allow
-            Action: s3:PutObject
-            Resource: !Sub "arn:aws:s3::${CFBucket}:/*"
+              - Effect: Allow
+                Action: s3:PutObject
+                Resource: !Sub "arn:aws:s3::${CFBucket}:/*"
 
-          - Effect: Allow
-            Action:
-              - cloudformation:SetStackPolicy
-              - cloudformation:CreateStack
-              - cloudformation:UpdateStack
-              - cloudformation:CreateChangeSet
-              - cloudformation:DescribeChangeSet
-              - cloudformation:ExecuteChangeSet
-              - cloudformation:DeleteChangeSet
-              - cloudformation:GetTemplateSummary
-            Resource: !Sub "arn:aws:cloudformation:us-west-2:${AWS::AccountId}:stack/*"
+              - Effect: Allow
+                Action:
+                  - cloudformation:SetStackPolicy
+                  - cloudformation:CreateStack
+                  - cloudformation:UpdateStack
+                  - cloudformation:CreateChangeSet
+                  - cloudformation:DescribeChangeSet
+                  - cloudformation:ExecuteChangeSet
+                  - cloudformation:DeleteChangeSet
+                  - cloudformation:GetTemplateSummary
+                Resource: !Sub "arn:aws:cloudformation:us-west-2:${AWS::AccountId}:stack/*"
 
   ApiGatewayLoggingRole:
     Type: AWS::IAM::Role
